# scriptworker-scripts

./: .coveragerc  .dirschema.yml  .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .taskcluster.yml  .travis.yml  .yamllint  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  SCOPES.md  TODO  config.json  config_example.json  consumer.py  default.nix  docker-compose.yml  example_server_config.json  fbs_requirements.txt  pyproject.toml  release.nix  requirements-codecov.txt  requirements-codecov.txt.in  requirements-coveralls.txt  requirements-coveralls.txt.in  requirements-dev.nix  requirements-dev.txt  requirements-dev_generated.nix  requirements-nix.nix  requirements-nix.txt  (+26 more)
addonscript/: .coveragerc  CHANGELOG.md  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  README.rst  api.py  exceptions.py  pyproject.toml  script.py  setup.py  task.py  tox.ini  utils.py  xpi.py
addonscript/addonscript/: __init__.py  api.py  exceptions.py  utils.py
addonscript/data/: addonscript_task_schema.json
addonscript/docker.d/: init_worker.sh  worker.yml
addonscript/requirements/: base.in  base.py36.txt  base.py37.txt  base.py38.txt  base.txt  local.py37.txt  local.py38.txt  local.txt  test.in  test.py36.txt  test.py37.txt  test.py38.txt  test.txt
addonscript/test/: __init__.py  test_api.py  test_script.py  test_task.py  test_utils.py
addonscript/tests/: conftest.py  fake_target.langpack.xpi  fake_target_with_bss.langpack.xpi  manifest.json  test_api.py  test_config.py  test_script.py  test_task.py  test_utils.py  test_xpi.py
balrogscript/: .coveragerc  .taskcluster.yml  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  balrogscript.py  docker-compose.yml  pyproject.toml  script.py  setup.py  task.py  tox.ini
balrogscript/balrogscript/: constants.py  script.py
balrogscript/data/: balrog_schedule_schema.json  balrog_submit-toplevel_schema.json  balrog_task_schema.json
balrogscript/docker.d/: init_worker.sh  scriptworker.yml  worker.yml
balrogscript/newsfragments/: 32.added  42.added  43.added
balrogscript/requirements/: base.in  base.py36.txt  base.py37.txt  base.py38.txt  base.txt  local.py37.txt  local.py38.txt  local.txt  test.in  test.py36.txt  test.py37.txt  test.py38.txt  test.txt
balrogscript/submitter/: cli.py  release.py  updates.py  util.py
balrogscript/test/: __init__.py  test_balrogworker.py  test_script.py  test_submitter_cli.py  test_submitter_updates.py  test_task.py
balrogscript/tests/: conftest.py  test_config.py  test_script.py  test_submitter_cli.py  test_submitter_updates.py  test_task.py
beetmoverscript/: .coveragerc  .gitignore  Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  _version.py  config_example.json  constants.py  maven_utils.py  pyproject.toml  script.py  setup.py  task.py  tox.ini  utils.py  zip.py
beetmoverscript/beetmoverscript/: constants.py  script.py  task.py  zip.py
beetmoverscript/data/: beetmover_task_schema.json  maven_beetmover_task_schema.json  release_beetmover_task_schema.json
beetmoverscript/docker.d/: init_worker.sh  scriptworker.yml  worker.yml
beetmoverscript/newsfragments/: 122.added  123.added  123.changed  124.added  125.changed  127.changed  129.fixed  137.changed  139.changed  1408083.removed  141.changed  1422471.changed  143.fixed  1442684.removed  1443873.added  1463749.added  1468562.fixed  1473259.added  1475512.added  (+12 more)
bitrisescript/: Dockerfile  README.md  pyproject.toml  setup.py  tox.ini
bouncerscript/: .coveragerc  CHANGELOG.md  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  constants.py  docker-compose.yml  pyproject.toml  script.py  setup.py  task.py  tox.ini  utils.py
builddecisionscript/: README.txt  pyproject.toml  tox.ini
configloader/: Dockerfile  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
githubscript/: Dockerfile  HISTORY.rst  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py  tox.ini
iscript/: .coveragerc  CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  __init__.py  config_example.json  config_example.yaml  exceptions.py  pyproject.toml  requirements-dev.txt  script.py  setup.py  tox.ini  utils.py
landoscript/: MANIFEST.in  pyproject.toml  setup.py  tox.ini
notarization_poller/: .coveragerc  .pyup.yml  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
pushapkscript/: .taskcluster.yml  CHANGELOG.md  Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  apk.py  exceptions.py  googleplay.py  jarsigner.py  l10n.py  manifest.py  publish.py  publish_config.py  pyproject.toml  script.py  setup.py  task.py  tox.ini  utils.py
pushflatpakscript/: Dockerfile  Dockerfile.test  README.md  SCOPES.md  pyproject.toml  setup.py  tox.ini
pushmsixscript/: Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  pyproject.toml  setup.py  tox.ini
script/: Cargo.toml
scriptworker_client/: .coveragerc  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
shipitscript/: .coveragerc  .gitignore  .taskcluster.yml  .travis.yml  Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.rst  SCOPES.md  exceptions.py  pyproject.toml  script.py  setup.py  ship_actions.py  task.py  tox.ini  utils.py
signingscript/: .coveragerc  CHANGELOG.md  Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.md  SCOPES.md  config_example.json  constants.py  createprecomplete.py  docker-compose.yml  example_server_config.json  exceptions.py  jarsigner.py  pyproject.toml  script.py  setup.py  sign.py  task.py  tox.ini  utils.py  worker.py
treescript/: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.md  README.rst  SCOPES.md  config_example.json  config_example.yaml  exceptions.py  mercurial.py  pyproject.toml  script.py  setup.cfg  setup.py  task.py  tox.ini  utils.py  version.txt  versionmanip.py
(+1107 files in other folders)
