[project]
name = "scriptworker-scripts"
version = "0.0.0"
requires-python = ">=3.8"

[tool.uv.workspace]
members = [
    "addonscript",
    "balrogscript",
    "beetmoverscript",
    "bitrisescript",
    "bouncerscript",
    "configloader",
    "githubscript",
    "iscript",
    "landoscript",
    "notarization_poller",
    "scriptworker_client",
    "scriptworker_client/packages/pytest-scriptworker-client",
]

[tool.uv.sources]
pytest-scriptworker-client = { workspace = true }
scriptworker_client = { workspace = true }
mozbuild = { path = "vendored/mozbuild" }

[tool.black]
line-length = 160
target-version = ["py38", "py311"]
include = '\.(wsgi|pyi?)$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.cache
  | \.cache_py3
  | _build
  | buck-out
  | build
  | dist
  | ui
  | vendored
)/
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".DS_Store",
    # Custom paths below
    "vendored",
    "tests",
    "createprecomplete.py",
]

# Same as Black.
line-length = 160

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
