[bdist_wheel]

[flake8]
max-line-length = 140
exclude =
    .tox
    dist
    build
    tests
    venv
max-complexity=10

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    venv
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
