[project]
name = "addonscript"
version = "1.0.0"
description = "Script to submit unsigned addons to AMO and get signed copies back"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
    "async-timeout",
    "pyjwt",
    "scriptworker",
    "taskcluster",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "aioresponses",
    "check-manifest",
    "coverage>=4.2",
    "freezegun",
    "mock",
    "pytest",
    # we use the event_loop fixture
    "pytest-asyncio<1.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    # pytest-random-order?
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
addonscript = "addonscript.script:main"
