[project]
name = "beetmoverscript"
version = "8.5.7"
description = "Taskcluster Beetmover Script"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "arrow",
    "Jinja2",
    "boto3",
    "mozilla-version",
    "redo",
    "scriptworker",
    "taskcluster",
    "google-cloud-storage<4",
    "google-cloud-artifact-registry",
]

[dependency-groups]
dev = [
    "tox",
    "tox-uv",
    "coverage",
    "mock",
    "pytest",
    "pytest-aioresponses",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
beetmoverscript = "beetmoverscript.script:main"

[tool.towncrier]
package = "beetmoverscript"
package_dir = "."
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://bugzilla.mozilla.org/show_bug.cgi?id={issue}>`_"
title_format = "[{version}] = ({project_date})"
underlines = "-~\""

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
