[project]
name = "bouncerscript"
version = "3.7.0"
description = "Taskcluster Bouncer Script"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mozilla-version",
    "scriptworker",
    "taskcluster",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "coverage>=4.2",
    "coverage",
    "mock",
    "pytest",
    # we use the event_loop fixture
    "pytest-asyncio<1.0",
    "pytest-cov",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
bouncerscript = "bouncerscript.script:main"

