[project]
name = "landoscript"
version = "1.0.0"
description = "Landoscript scriptworker"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
    "async-timeout",
    "gql",
    "mozilla-version",
    "moz.l10n",
    "scriptworker",
    "scriptworker-client",
    "taskcluster<97",
    "yarl",
]

[dependency-groups]
dev = [
    "tox",
    "tox-uv",
    "coverage",
    "pytest",
    "pytest-aioresponses",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-responses",
    "pytest-scriptworker-client",
]

[tool.uv.sources]
scriptworker-client = { workspace = true }
pytest-scriptworker-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
landoscript = "landoscript.script:main"

[tool.coverage.run]
branch = true
