[project]
name = "notarization_poller"
version = "1.0.0"
description = "Taskcluster notarization poller"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "aiohttp",
    "arrow>=1.0",
    "async_timeout",
    "immutabledict",
    "scriptworker-client",
    "taskcluster",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "coverage",
    "flake8",
    "flake8_docstrings",
    "isort",
    "mock",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "python-coveralls",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
notarization_poller = "notarization_poller.worker:main"
