[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
