[project]
name = "pushapkscript"
version = "5.0.0"
description = "Taskcluster pushapk worker"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mozapkpublisher",
    "scriptworker",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "check-manifest",
    "coverage>=4.2b1",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
addonscript = "addonscript.script:main"
