[project]
name = "pushflatpakscript"
version = "0.0.1"
description = "Taskcluster flatpak worker"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scriptworker",
    "taskcluster",
]

[dependency-groups]
dev = [
    "tox",
    "tox-uv",
    "coverage>=4.2b1",
    "mock",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
flat-manager = [
    "aiohttp",
    "pygobject<3.52",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
pushflatpakscript = "pushflatpakscript.script:main"
