[project]
name = "pushmsixscript"
version = "0.1.0"
description = "Taskcluster push msix worker"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "azure-storage-blob",
    "scriptworker",
    "scriptworker-client",
    "taskcluster",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "coverage>=4.2b1",
    "flake8",
    "mock",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""

[project.scripts]
pushmsixscript = "pushmsixscript.script:main"
