[package]
name = "scriptworker_script"
version = "0.1.0"
authors = ["Tom Prince <mozilla@hocat.ca>"]
edition = "2018"

[dependencies]
# We disable features for clap, since it isn't used interactively.
clap = {version = "2.33.0", default-features = false}
serde_yaml = "0.8.9"
serde_json = "1.0.40"
serde = "1.0.99"
serde_derive = "1.0.99"
scriptworker_script_macros = { path = "macros" }
