[project]
name = "scriptworker_client"
version = "1.0.0"
description="Scriptworker *script shared code"
url = "https://github.com/mozilla-releng/scriptworker-scripts/"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
    "immutabledict",
    "jsonschema",
    "PyYAML",
    "simple-github",
]

[tool.uv]
dev-dependencies = [
    "tox",
    "tox-uv",
    "mypy",
    "gql",
    "coverage",
    "mock",
    "pytest-aioresponses",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-scriptworker-client",
    "yarl",
    "types-PyYAML",
    "graphql-core"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.hatch.build.targets.wheel.sources]
"src/" = ""
